--- a/Pikachu.html
+++ b/Pikachu.html
@@ -51,11 +51,11 @@
 			}
 			
 			a:visited{
-				color: darkorchid;
+				color: royalblue;
 			}
 			
 			a:hover {
-				color: indigo;
+				color: cornflowerblue;
 			}
 			
 			a:active{
