--- a/Pikachu.html
+++ b/Pikachu.html
@@ -74,12 +74,20 @@
 	<body>
 	<div>
 	
+	<img src= "running.gif" length= 100px width=100px>
+	<img src= "running.gif" length= 100px width=100px>
+	<img src= "running.gif" length= 100px width=100px>
+	<img src= "running.gif" length= 100px width=100px>
+	<img src= "running.gif" length= 100px width=100px>
+	<img src= "running.gif" length= 100px width=100px> 
+	<img src= "running.gif" length= 100px width=100px>
+	<img src= "running.gif" length= 100px width=100px>
 	
 	<h1>Pikachu!</h1>
 	
 	<p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed pellentesque blandit cursus. Phasellus condimentum maximus volutpat. In dui odio, rutrum a ante non, tempor elementum purus. Sed eleifend varius vehicula. Aliquam a sodales lacus, sed euismod orci.</p>
 	
-	<h2>Subheading 1!</h2> <img src= "running.gif" length= 100px width=100px>
+	<h2>Subheading 1!</h2> 
 	
 	<p>
 	Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque finibus aliquam odio. Morbi id tristique diam, sit amet semper ex. Nulla tincidunt massa ac urna tristique tempor non vitae lectus.</p>
